[gd_scene load_steps=12 format=2]

[ext_resource path="res://options.gd" type="Script" id=1]
[ext_resource path="res://sprits/sprits/+.png" type="Texture" id=2]
[ext_resource path="res://sprits/sprits/-.png" type="Texture" id=3]
[ext_resource path="res://sprits/sprits/ok.png" type="Texture" id=4]
[ext_resource path="res://sprits/sprits/sound.png" type="Texture" id=5]
[ext_resource path="res://sprits/sprits/music.png" type="Texture" id=6]
[ext_resource path="res://sprits/backgrownd.png" type="Texture" id=7]
[ext_resource path="res://sprits/sprits/options.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/energy_bar_bg.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/energy_bar_fill.png" type="Texture" id=10]
[ext_resource path="res://assets/sound/02 - BWV 1007 - Prelude.ogg" type="AudioStream" id=11]

[node name="options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="plus_1" type="TextureButton" parent="."]
margin_left = 1517.91
margin_top = 417.426
margin_right = 1615.91
margin_bottom = 545.426
texture_normal = ExtResource( 2 )

[node name="minus_1" type="TextureButton" parent="."]
margin_left = 1700.06
margin_top = 417.426
margin_right = 1798.06
margin_bottom = 541.426
texture_normal = ExtResource( 3 )

[node name="plus_2" type="TextureButton" parent="."]
margin_left = 1506.53
margin_top = 724.803
margin_right = 1604.53
margin_bottom = 852.803
texture_normal = ExtResource( 2 )

[node name="minus_2" type="TextureButton" parent="."]
margin_left = 1686.29
margin_top = 726.781
margin_right = 1784.29
margin_bottom = 850.781
texture_normal = ExtResource( 3 )

[node name="ok" type="TextureButton" parent="."]
margin_left = 712.401
margin_top = 1032.47
margin_right = 1181.4
margin_bottom = 1155.47
texture_normal = ExtResource( 4 )

[node name="sound" type="Sprite" parent="."]
position = Vector2( 397.733, 476.736 )
texture = ExtResource( 5 )

[node name="music" type="Sprite" parent="."]
position = Vector2( 383.798, 774.398 )
texture = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 959.981, 599.992 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 940.087, 97.8125 )
texture = ExtResource( 8 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 758.957
margin_top = 413.631
margin_right = 1006.96
margin_bottom = 453.631
rect_scale = Vector2( 2.69401, 2.90774 )
max_value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )

[node name="TextureProgress2" type="TextureProgress" parent="."]
margin_left = 755.162
margin_top = 721.009
margin_right = 1003.16
margin_bottom = 761.009
rect_scale = Vector2( 2.69401, 2.90774 )
max_value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
mix_target = 1
[connection signal="mouse_entered" from="plus_1" to="." method="_on_plus_1_mouse_entered"]
[connection signal="mouse_exited" from="plus_1" to="." method="_on_plus_1_mouse_exited"]
[connection signal="pressed" from="plus_1" to="." method="_on_plus_1_pressed"]
[connection signal="mouse_entered" from="minus_1" to="." method="_on_minus_1_mouse_entered"]
[connection signal="mouse_exited" from="minus_1" to="." method="_on_minus_1_mouse_exited"]
[connection signal="pressed" from="minus_1" to="." method="_on_minus_1_pressed"]
[connection signal="mouse_entered" from="plus_2" to="." method="_on_plus_2_mouse_entered"]
[connection signal="mouse_exited" from="plus_2" to="." method="_on_plus_2_mouse_exited"]
[connection signal="pressed" from="plus_2" to="." method="_on_plus_2_pressed"]
[connection signal="mouse_entered" from="minus_2" to="." method="_on_minus_2_mouse_entered"]
[connection signal="mouse_exited" from="minus_2" to="." method="_on_minus_2_mouse_exited"]
[connection signal="pressed" from="minus_2" to="." method="_on_minus_2_pressed"]
[connection signal="mouse_entered" from="ok" to="." method="_on_ok_mouse_entered"]
[connection signal="mouse_exited" from="ok" to="." method="_on_ok_mouse_exited"]
[connection signal="pressed" from="ok" to="." method="_on_ok_pressed"]
